# wgpu_learning

./: Cargo.toml
res/models/blob/: blob.mtl
res/shaders/: light.wgsl  shader.wgsl
src/: Node.rs  camera.rs  constants.rs  graphics_context.rs  lib.rs  light.rs  main.rs  model.rs  model_matrix.rs  simple_pipeline.rs  texture.rs  vertex.rs
