[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[dependencies]
wgpu = "0.15.1"
winit = "0.28.1"
log = "0.4.17"
env_logger = "0.10.0"
pollster = "0.2.5"
bytemuck = { version = "1.13.0", features = [ "derive" ] }
image = "0.24.5"
anyhow = "1.0.68"
cgmath = "0.18.0"
tobj = { version = "3.2.3", features = [
    "async",
]}